# poolcar-system

./: .gitignore  Cargo.toml  Containerfile  build.fish  compose.yaml  environment.compose.yaml  local.compose.yaml
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  poolcar-backend.container
backend/bindings/: Activity.ts  ActivityBody.ts  ActivityDetails.ts  ActivityExport.ts  ActivityMarker.ts  ActivityType.ts  ActivityTypeBody.ts  ActivityTypeDetails.ts  ActivityWithCount.ts  Car.ts  CarAudit.ts  CarBody.ts  CarDetails.ts  CarExportDetails.ts  CarStatus.ts  CarStatusBody.ts  CarStatusDetails.ts  CarType.ts  CarTypeBody.ts  CarTypeDetails.ts  CarTypeExportDetails.ts  CarTypeWithCount.ts  CarWithTracker.ts  Claims.ts  Contact.ts  ContactBody.ts  ContactDetails.ts  ContactExport.ts  ContactType.ts  ContactTypeBody.ts  ContactTypeDetails.ts  ContactTypeExport.ts  ContactTypeWithCount.ts  ContactWithDetails.ts  DeleteActivity.ts  Distances.ts  GetActivitiesResponse.ts  GetActivityTypesResponse.ts  GetAuditResponse.ts  GetCarStatusesResponse.ts  (+69 more)
backend/migration/src/: m20260614_143829_create_table_trackers.rs  m20260616_015527_create_table_contacts.rs  m20260616_033125_create_table_audit.rs  m20260616_033445_create_table_hardware_test.rs
backend/migrations/: 20260106003022_create_trackers_table.sql  20260106004035_create_car_types_table.sql  20260106004740_create_cars_table.sql  20260106010133_create_contact_types_table.sql  20260106010249_create_contacts_table.sql  20260106010802_create_activities_table.sql  20260106010802_create_activity_types_table.sql  20260106010934_create_activities_table.sql  20260201161901_create_user_roles_table.sql  20260201162137_create_users_table.sql  20260313073508_create_car_status_table.sql  20260317080102_create_audit_table.sql  20260317080102_create_car_audit.sql  20260317080102_create_car_audit_table.sql  20260520070228_create_hardware_test_table.sql
backend/src/: activity_routes.rs  auth.rs  auth_routes.rs  auth_utils.rs  car_routes.rs  car_type_routes.rs  chart_routes.rs  chart_websocket.rs  config.rs  contact_routes.rs  contact_type_routes.rs  dashboard_routes.rs  error.rs  history_routes.rs  lib.rs  live_tracking_routes.rs  live_tracking_websocket.rs  main.rs  middleware.rs  models.rs  mqtt_handlers.rs  mqtt_payload_handler.rs  redis.rs  run.rs  state.rs  tracker_routes.rs  types.rs  user_routes.rs  validate.rs
backend/src/entities/: audit.rs  car_status.rs  cars.rs  contacts.rs  hardware_test.rs  sea_orm_active_enums.rs
backend/src/handlers/: audit_handler.rs  distance_handler.rs  mod.rs  mqtt_handler.rs
backend/src/loops/: audit.rs  mqtt.rs
backend/src/models/: activity.rs  activity_type.rs  audit.rs  car.rs  car_status.rs  car_type.rs  contact.rs  contact_type.rs  google_map.rs  history.rs  live_tracking.rs  login.rs  mod.rs  mqtt.rs  tracker.rs  user.rs  user_role.rs  websocket.rs
backend/src/pages/: api.rs  audit.rs  car_history.rs  cars.rs  contacts.rs  dashboard.rs  live.rs  login.rs  mod.rs  trackers.rs  trips.rs  trips_employee.rs
backend/src/routes/: activity_routes.rs  activity_type_routes.rs  audit_routes.rs  auth_routes.rs  car_routes.rs  car_status_routes.rs  car_type_routes.rs  chart_routes.rs  contact_routes.rs  contact_type_routes.rs  dashboard_routes.rs  google_map_routes.rs  history_routes.rs  live_tracking_routes.rs  mod.rs  tracker_routes.rs  user_role_routes.rs  user_routes.rs
backend/src/tasks/: audit.rs  chart.rs  distance.rs  mod.rs  mqtt.rs
backend/src/websocket/: chart_websocket.rs  live_tracking_websocket.rs  mod.rs
backend/templates/: audit.j2  car_history.j2  cars.j2  contacts.j2  dashboard.j2  live.j2  login.html  places_search_results.j2  template.html  trackers.j2  trips.j2  trips_employee.j2  users.j2
backend/tests/: activity_test.rs  car_test.rs  car_type_test.rs  contact_test.rs  contact_type_test.rs  history_test.rs  tracker_test.rs
backend/tests/common/: mod.rs
frontend/: .dockerignore  .prettierrc  Caddyfile  Dockerfile  eslint.config.js  package.json  poolcar-frontend.container  svelte.config.js  vite.config.ts
hardware/: platformio.ini
migrations/: 20260106004740_create_cars_table.sql  20260106010934_create_histories_table.sql
mobile/: flutter_launcher_icons.yaml  pubspec.yaml
mobile/rust/: Cargo.toml
mobile/rust/src/: frb_generated.rs
mobile/rust/src/api/: auth.rs  car.rs  history.rs  mod.rs
src/: activity_routes.rs  car_routes.rs  car_type_routes.rs  chart_handler.rs  chart_routes.rs  contact_routes.rs  contact_type_routes.rs  dashboard_routes.rs  history_routes.rs  lib.rs  live_tracking_routes.rs  live_tracking_websocket.rs  main.rs  models.rs  mqtt_handlers.rs  mqtt_payload.rs  tracker_routes.rs
testing/: gps.txt  gsm.py  main.py  oa.py  old.py  pyproject.toml  qos.py  qos.txt  qos_analysis_improved.py  qos_clean.py  qos_summary.csv  si.py  su.py  test.csv  test2.csv
tests/: activity_test.rs  car_test.rs  car_type_test.rs  contact_test.rs  contact_type_test.rs  history_test.rs  tracker_test.rs
(+147 files in other folders)
