[package]
name = "poolcar_backend"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.8", features = ["ws"] }
chrono = { version = "0.4.42", features = ["serde"] }
csv = "1.4.0"
deadpool-redis = { version = "0.22.0", features = ["serde"] }
dotenvy = "0.15.7"
rand = "0.9.2"
rumqttc = { version = "0.25.1", features = ["use-rustls"] }
rust_decimal = { version = "1.39.0", features = ["serde"] }
serde = "1.0.228"
serde_json = "1.0.148"
sqlx = { version = "0.8.6", features = [
    "sqlite",
    "runtime-tokio",
    "mysql",
    "postgres",
    "tls-rustls-aws-lc-rs",
    "chrono",
    "rust_decimal",
] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.8", features = ["cors"] }
ts-rs = { version = "11.1.0", features = [
    "serde-compat",
    "chrono-impl",
    "serde-json-impl",
] }

[dev-dependencies]
reqwest = { version = "0.13.1", features = ["json", "rustls"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
