[package]
name = "poolcar_backend"
version = "0.3.1"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.8.8", features = ["ws"] }
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
csv = "1.4.0"
deadpool-redis = { version = "0.22.0", features = ["serde"] }
dotenvy = "0.15.7"
haversine-rs = "0.3.0"
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
rand = "0.9.2"
reqwest = { version = "0.13.1", features = ["json", "rustls"] }
rumqttc = { version = "0.25.1", features = ["use-rustls"] }
serde = "1.0.228"
serde_json = "1.0.148"
sqlx = { version = "0.8.6", features = [
    "sqlite",
    "runtime-tokio",
    "mysql",
    "postgres",
    "tls-rustls-aws-lc-rs",
    "chrono",
] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
ts-rs = { version = "11.1.0", features = [
    "serde-compat",
    "chrono-impl",
    "serde-json-impl",
] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
