[package]
name = "backend"
version = "0.5.0"
edition = "2024"

[workspace]
members = [".", "migration"]

[dependencies]
# argon2 = "0.5.3"
# axum = { version = "0.8.9", features = ["ws"] }
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4.0"
dotenvy = "0.15.7"
haversine-rs = "0.3.0"
migration = { path = "migration" }
redis = { version = "1.2.3", features = ["tokio-native-tls-comp"] }
rand = "0.10.1"
rumqttc = { version = "0.24.0", default-features = false, features = ["use-native-tls", "url"] }
sea-orm = { version = "2.0.0-rc.41", features = ["sqlx-mysql", "runtime-tokio-native-tls", "with-chrono", "with-uuid"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
# thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
anyhow = "1.0.103"
rocket = { version = "0.5.1", features = ["json"] }
askama = "0.16.0"
askama_web = { version = "0.16.0", features = ["rocket-0.5"] }
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
reqwest = { version = "0.13.4", features = ["json", "native-tls"] }
bytes = "1.12.0"
rocket_ws = "0.1.1"
# tower-http = { version = "0.7.0", features = ["cors", "trace"] }
